--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -17,5 +17,5 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/prodly/PlaywrightTestAutomation/dispatches \
+           ${{ secrets.TEST_REPO }} \
             -d '{"event_type":"app-code-changed","client_payload":{"ref":"${{ github.ref }}"}}'
